[package]
name = "download-images"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.11"
tokio = { version = "1.19.2", features = ["full"] }
bytes = "1.1.0"
log = { version = "0.4.17", features = ["std"] }
